--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,7 @@
+/* @tailwind base;
+@tailwind components;
+@tailwind utilities; */
+
 :root {
   --max-width: 1100px;
   --border-radius: 12px;
@@ -108,4 +112,9 @@ a {
   html {
     color-scheme: dark;
   }
+}
+
+.leaflet-container {
+  width: 100%; 
+  height: 50vh;
 }
