--- a/src/app/CSS/Components/Button.css
+++ b/src/app/CSS/Components/Button.css
@@ -1,15 +1,18 @@
 .button{
-    background-color: white;
-    color: #3b82f6;
+    background-color:#3b82f6;
+    color: white;
     padding: 12px 24px;
+    border: none;
     border-radius: 4px;
     font-size: 16px;
     text-decoration: none;
     font-weight: 500;
     display: inline-block;
     margin-top: 20px;
+    transition: 1s;
 }
 
 .button:hover{
+    color: #3b82f6;
     background-color: #e0f2fe;
 }
