--- a/src/app/CSS/map.css
+++ b/src/app/CSS/map.css
@@ -1,3 +1,21 @@
 .map-container{
     position: relative;
 }
+
+.Popup{
+    width: 100%;
+}
+
+.Popup h3{
+    font-size: large;
+}
+
+.Popup p{
+    font-size: small;
+}
+
+.Popup button{
+    display: flex;
+    align-items: end;
+    justify-content: end;
+}
