--- a/src/app/CSS/Components/Marquee.css
+++ b/src/app/CSS/Components/Marquee.css
@@ -16,6 +16,12 @@
     display: flex;
     white-space: nowrap;
   }
+
+  .marquee-item:hover{
+    transform: translateY(-5px);
+    box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
+  
+  }
   
   .marquee-item {
     display: inline-block;
