--- a/src/app/CSS/home.css
+++ b/src/app/CSS/home.css
@@ -229,6 +229,10 @@ body {
     text-align: center;
 }
 
+.testimonials .testimonials-container{
+    padding: 20px;
+}
+
 .service-cards, .project-cards, .feature-cards {
     display: grid;
     gap: 32px;
