--- a/src/app/CSS/home.css
+++ b/src/app/CSS/home.css
@@ -13,7 +13,7 @@ body {
 }
 
 .hero {
-    background-color: #3b82f6;
+    /* background-color: #3b82f6; */
     position: relative;
     overflow: hidden;
     width: 100%;
@@ -54,7 +54,7 @@ body {
     position: absolute;
     top: 0;
     left: 0;
-    opacity: 0.2; /* Lower opacity for background effect */
+    opacity: 1; /* Lower opacity for background effect */
     z-index: -1; /* Ensure images are behind the text */
 }
 
@@ -88,6 +88,8 @@ body {
     justify-content: space-between;
     transform: translateY(-50%);
     z-index: 3; /* Ensure buttons are above images */
+    transition: all 0.3s;
+
 }
 
 .carousel-buttons button {
@@ -128,7 +130,7 @@ body {
 
 /* Info Section */
 .info {
-    background-color: #3b82f6;
+    background-color: #2563eb;
     padding: 16px 16px;
     display: flex;
     
@@ -185,18 +187,41 @@ body {
     font-size: 32px;
     margin-bottom: 32px;
     transition: all 1s;
-    color: #3b82f6;
+    color: #2563eb;
+}
+
+.project-image{
+    width: auto;
+    height: 200px;
+    display: flex;
+}
+
+.project-image img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 8px;
+    justify-content: center;
+    align-items: center;
+    transition: all 0.3s;
+}
+
+.project-image img:hover{
+    scale: 1.145;
+    transform: translateY(-10px);
+    border-radius: 8px 8px 0 0;
 }
 
 .testimonials .testimonials-container h2{
     font-size: 32px;
-    margin-bottom: 32px;
+    margin-bottom: 64px;
     text-align: center;
-    color: #3b82f6;
+    color: #2563eb;
 }
 
 .testimonials .testimonials-container{
     padding: 20px;
+    
 }
 
 .service-cards, .project-cards, .feature-cards {
@@ -214,7 +239,7 @@ body {
 }
 
 .service-card:hover, .project-card:hover, .feature-card:hover {
-    background-color: #3b83f69e;
+    background-color: #2563eb;
     color: white;
     padding: 24px;
     border-radius: 8px;
@@ -223,7 +248,13 @@ body {
 
 .icon {
     font-size: 24px;
-    color: #3b82f6;
+   
+    margin-bottom: 16px;
+}
+
+.icon:hover {
+    font-size: 24px;
+    color: white;
     margin-bottom: 16px;
 }
 
@@ -253,6 +284,10 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    background-color: #2563eb;
+    color: white;
+    margin-bottom: 15px;
+    padding: 20px;
 }
 
 .contact-info .info{
