--- a/src/app/CSS/Components/Marquee.css
+++ b/src/app/CSS/Components/Marquee.css
@@ -1,4 +1,5 @@
 .marquee-container {
+  padding-top: 20px;
     overflow: hidden;
     white-space: nowrap;
     position: relative;
@@ -12,6 +13,7 @@
     display: flex;
     width: 200%; 
     animation: marquee 30s linear infinite;
+    margin-top: 10px;
   }
   
   .marquee-content {
