--- a/src/app/CSS/home.css
+++ b/src/app/CSS/home.css
@@ -133,10 +133,13 @@ body {
     background-color: #2563eb;
     padding: 16px 16px;
     display: flex;
-    
+    height: 50vh;
+    justify-content: center;
+    align-items: center;
 }
 
 .info-container {
+    
     margin: 0 auto;
     text-align:start;
     
@@ -165,15 +168,21 @@ body {
 
 .info p {
     font-size: 18px;
-
     margin-bottom: 16px;
 }
 
 
 .services, .projects, .about-us, .contact {
     background-color: white;
-    padding: 64px 16px;
+    padding: 10px 16px 32px;
 }
+
+
+
+.projects, .contact{
+    background-color: #1e3a8a;
+}
+
 
 .services-container, .projects-container, .about-us-container, .contact-container {
     max-width: 1200px;
@@ -189,6 +198,16 @@ body {
     transition: all 1s;
     color: #2563eb;
 }
+
+.contact h2{
+    color: white;
+}
+
+.projects h2{
+    color: white;
+}
+
+
 
 .project-image{
     width: auto;
@@ -212,17 +231,30 @@ body {
     border-radius: 8px 8px 0 0;
 }
 
+.testimonials{
+    overflow: hidden;
+    
+}
+
 .testimonials .testimonials-container h2{
     font-size: 32px;
-    margin-bottom: 64px;
+    margin-bottom: 16px;
+    padding-top: 30px;
     text-align: center;
     color: #2563eb;
 }
 
-.testimonials .testimonials-container{
-    padding: 20px;
-    
+.testimonials .testimonials-container h2:nth-child(odd){
+    color: white;
 }
+
+.testimonials .testimonials-container .clients-part{
+    background-color: #1e3a8a;
+    padding-bottom: 24px;
+}
+
+
+
 
 .service-cards, .project-cards, .feature-cards {
     display: grid;
@@ -238,6 +270,9 @@ body {
     transition: all 0.3s;
 }
 
+
+
+
 .service-card:hover, .project-card:hover, .feature-card:hover {
     background-color: #2563eb;
     color: white;
@@ -248,7 +283,6 @@ body {
 
 .icon {
     font-size: 24px;
-   
     margin-bottom: 16px;
 }
 
@@ -272,6 +306,10 @@ body {
 
 .contact-sub-container{
     display: block;
+    border: none;
+    border-radius: 8px;
+    overflow: hidden;
+    background-color: #2563eb;
 }
 
 .map{
@@ -279,6 +317,7 @@ body {
 }
 
 .contact-info{
+    overflow: hidden;
     flex: 1;
     display: flex;
     flex-direction: column;
