--- a/src/app/CSS/home.css
+++ b/src/app/CSS/home.css
@@ -133,7 +133,7 @@ body {
     background-color: #2563eb;
     padding: 16px 16px;
     display: flex;
-    height: 50vh;
+    
     justify-content: center;
     align-items: center;
 }
@@ -174,7 +174,7 @@ body {
 
 .services, .projects, .about-us, .contact {
     background-color: white;
-    padding: 10px 16px 32px;
+    padding: 32px 16px;
 }
 
 
@@ -269,9 +269,6 @@ body {
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     transition: all 0.3s;
 }
-
-
-
 
 .service-card:hover, .project-card:hover, .feature-card:hover {
     background-color: #2563eb;
