--- a/src/app/CSS/Components/Marquee.css
+++ b/src/app/CSS/Components/Marquee.css
@@ -24,7 +24,7 @@
   .marquee-item:hover{
     transform: translateY(-5px);
     box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
-  
+    
   }
   
   .marquee-item {
@@ -33,6 +33,8 @@
     vertical-align: middle;
     border: none;
     border-radius: 10px;
+    margin-left: 10px;
+    margin-right: 10px;
 
   }
   
@@ -49,7 +51,7 @@
   
   @keyframes marquee {
     0% { transform: translateX(0); }
-    100% { transform: translateX(-50%); } 
+    100% { transform: translateX(-90%); } 
   }
 
   @media screen and (max-width: 768px) {
@@ -60,7 +62,12 @@
     .marquee{
       display: flex;
       width: 200%; 
-      animation: marquee 20s linear infinite;
+      animation: marquee 25s linear infinite;
+    }
+
+    @keyframes marquee {
+      0% { transform: translateX(0); }
+      100% { transform: translateX(-400%); } 
     }
     
   }
