--- a/src/app/CSS/Components/Marquee.css
+++ b/src/app/CSS/Components/Marquee.css
@@ -23,7 +23,7 @@
 
   .marquee-item:hover{
     transform: translateY(-5px);
-    box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
+    /* box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05); */
     
   }
   
@@ -35,7 +35,7 @@
     border-radius: 10px;
     margin-left: 10px;
     margin-right: 10px;
-
+    transition: all 0.3s ease-in-out;
   }
   
   .marquee-image {
