--- a/src/app/CSS/about.css
+++ b/src/app/CSS/about.css
@@ -3,3 +3,126 @@ body{
     padding: 0;
     box-sizing: border-box;
 }
+
+.about-us-container{
+    display: block;
+    text-align: start;
+    padding: 4rem 0;
+    
+}
+
+
+.about-profile{
+    display: flex;
+    padding: 2rem 2rem;
+    gap: 2rem;
+} 
+
+.about-profile-image{
+    flex: 1;
+}
+
+.about-profile-image img{
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+    border-radius: 8px;
+    border: none;
+}
+
+.about-profile-text{
+    flex: 1.5;
+
+}
+
+.about-profile-text h2{
+    font-size: 2rem;
+    font-weight: 700;
+    color: #1e3a8a;
+    margin-bottom: 1rem;
+}
+
+.about-management{
+    margin-top: 2rem;
+    background-color: #1e3a8a;
+    padding: 1rem 2rem;
+}
+
+.about-management h2{
+    font-size: 2rem;
+    font-weight: 700;
+    color: white;
+    margin-bottom: 1rem;
+}
+
+.management-text{
+    text-align: center;
+}
+
+.management-grid{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 2rem;
+    padding: 2rem 0;
+}
+
+.management-grid .management-card{
+    background-color: #f3f4f6;
+    padding: 1rem;
+    border-radius: 8px;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.management-icon{
+    overflow: hidden;
+    border-radius: 8px;
+    border: none;
+}
+
+.management-grid .management-card .management-icon img{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    
+    transition: all 0.3s ease-in-out;
+}
+
+.management-grid .management-card .management-icon img:hover{
+    scale: 1.1;
+}
+
+.about-vision {
+    padding: 4rem 2rem;
+    text-align: center;
+    background-color: #f3f4f6;
+}
+
+
+.about-vision h2{
+    font-size: 2rem;
+    font-weight: 700;
+    color: #1e3a8a;
+    margin-bottom: 1rem;
+}
+
+.about-vision p{
+    font-size: 1rem;
+    color: #1e3a8a;
+}
+
+@media screen and (max-width: 768px){
+    .management-grid{
+        grid-template-columns: repeat(1, 1fr);
+    }
+
+    .about-profile{
+        flex-direction: column;
+    }
+    
+}
+
