--- a/src/app/CSS/Components/slideCard.css
+++ b/src/app/CSS/Components/slideCard.css
@@ -53,7 +53,8 @@
     margin-top: 0.5rem;
     font-weight: 600;
     color: #2563eb;
-    text-align: center;
+    padding: 0 1rem;
+    text-align: start;
   }
   
   .work-carousel-nav-button {
