--- a/src/app/CSS/home.css
+++ b/src/app/CSS/home.css
@@ -133,7 +133,7 @@ body {
 /* Info Section */
 .info {
     background-color: #2563eb;
-    padding: 16px 16px;
+    padding: 1.5rem 1.5rem;
     display: flex;
     
     justify-content: center;
@@ -185,7 +185,7 @@ body {
 
 .services, .projects, .about-us, .contact {
     background-color: white;
-    padding: 32px 16px;
+    padding: 2rem 1rem;
 }
 
 
@@ -208,6 +208,10 @@ body {
     margin-bottom: 32px;
     transition: all 1s;
     color: #2563eb;
+}
+
+.about-us h2{
+    padding: 0 1rem;
 }
 
 .contact h2{
@@ -346,19 +350,6 @@ body {
 
 .sub-contact-info{
     margin-bottom: 10px;
-}
-
-
-.footer {
-    background-color: #1e3a8a;
-    color: white;
-    padding: 4px 8px;
-    text-align: center;
-}
-
-.footer-container {
-    max-width: 1200px;
-    margin: 0 auto;
 }
 
 
