--- a/src/app/CSS/Components/Navbar.css
+++ b/src/app/CSS/Components/Navbar.css
@@ -9,7 +9,7 @@
     position: fixed;
     width: 100%;
     top: 0;
-    z-index: 10;
+    z-index: 999999;
     
 }
 
@@ -87,7 +87,7 @@
 
     .nav-content .nav-sheet{
         display: block;
-        margin-right: 16px;
+        margin-right: 1.5rem;
     }
     
 }
