--- a/src/app/CSS/contact.css
+++ b/src/app/CSS/contact.css
@@ -3,3 +3,56 @@ body{
     padding: 0;
     box-sizing: border-box;
 }
+
+.contact-container{
+    display: block;
+    text-align: start;
+    padding: 4rem 1rem;
+    
+}
+
+.contact-container h2{
+    font-size: 2rem;
+    font-weight: 700;
+    color: #1e3a8a;
+    margin-bottom: 1rem;
+}
+
+.map-container{
+    display: block;
+    border: none;
+    width: 100%;
+    border-radius: 8px;
+    overflow: hidden;
+}
+
+.contact-grid{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    gap: 2rem;
+    padding: 2rem 0;
+}
+
+.contact-grid .contact-card{
+    background-color: white;
+    padding: 1rem 2rem;
+    border-radius: 8px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    transition: all 0.3s ease-in-out;
+}
+
+.contact-card h3{
+    font-size: 1.5rem;
+    font-weight: 700;
+    color: #3b82f6;
+    margin-bottom: 1rem;
+}
+
+.contact-card:hover{
+    background-color: #1e3a8a;
+    color: white;
+    padding: 1rem 2rem;
+    border-radius: 8px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    transform: translateY(-5px);
+}
