--- a/src/app/CSS/about.css
+++ b/src/app/CSS/about.css
@@ -11,10 +11,16 @@ body{
     
 }
 
-
+.about-us-container h2{
+    font-size: 2rem;
+    font-weight: 700;
+    color: #1e3a8a;
+    margin-left: 1rem;
+    margin-bottom: 0;
+}
 .about-profile{
     display: flex;
-    padding: 2rem 2rem;
+    padding: 2rem 1rem;
     gap: 2rem;
 } 
 
