--- a/src/app/CSS/about.css
+++ b/src/app/CSS/about.css
@@ -15,12 +15,12 @@ body{
     font-size: 2rem;
     font-weight: 700;
     color: #1e3a8a;
-    margin-left: 2rem;
+    margin-left: 1.5rem;
     margin-bottom: 0;
 }
 .about-profile{
     display: flex;
-    padding: 2rem 2rem;
+    padding: 2rem 1.5rem;
     gap: 2rem;
 } 
 
@@ -51,7 +51,7 @@ body{
 .about-management{
     margin-top: 2rem;
     background-color: #1e3a8a;
-    padding: 1rem 2rem;
+    padding: 1rem 0rem;
 }
 
 .about-management h2{
@@ -69,7 +69,7 @@ body{
     display: grid;
     grid-template-columns: repeat(auto-fit,minmax(200px, 1fr));
     gap: 2rem;
-    padding: 2rem 0;
+    padding: 2rem 2rem;
 }
 
 .management-grid .management-card{
@@ -104,6 +104,8 @@ body{
 
 .about-vision {
     padding: 4rem 2rem;
+    justify-content: center;
+    align-items: center;
     text-align: center;
     background-color: #f3f4f6;
 }
@@ -119,6 +121,10 @@ body{
 .about-vision p{
     font-size: 1rem;
     color: #1e3a8a;
+}
+
+.about-vision .medal{
+    padding-left: 1.5rem;
 }
 /* 
 .info-grid{
@@ -165,7 +171,7 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 4rem 0;
+    padding: 4rem 2rem;
     background-color: #f3f4f6;
   }
   
