--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,6 +1,6 @@
-@import 'tailwindcss/base';
-@import 'tailwindcss/components';
-@import 'tailwindcss/utilities';
+@import "tailwindcss/base";
+@import "tailwindcss/components";
+@import "tailwindcss/utilities";
 
 /* Rest of the CSS code */
 
@@ -73,4 +73,21 @@
 .leaflet-container {
   width: 100%;
   height: 350px;
+}
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background: #1e3a8a;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #728bd1;
+  border-radius: 0.5rem; 
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #819eee;
 }
